# riak2

./: .gitignore  .stylish-haskell.yaml  README.md  Setup.hs  cabal.project  install  riak-but-better.cabal  riak.proto
app/: Main.hs
libriak/: PerformanceLog.md  libriak.cabal  out
libriak-internal/: generate-proto.sh  libriak-internal.cabal
libriak-internal/proto/: riak.proto
libriak-internal/src-proto/Proto/Proto/: Riak.hs  Riak_Fields.hs
libriak-internal/src/Libriak/: Connection.hs  Proto.hs  Request.hs  Response.hs
libriak-internal/src/Libriak/Internal/: Connection.hs  Utils.hs
libriak/benchmarks/: Ping.hs  Send.hs
libriak/src/Libriak/: Connection.hs  Handle.hs  Proto.hs  Request.hs  Response.hs
libriak/src/Libriak/Internal/: Connection.hs
libriak/src/Libriak/Proto/: Lens.hs
libriak/src/Riak/Handle/: Signature.hsig
riak2/: README.md  riak2.cabal
riak2-benchmarks/: riak2-benchmarks.cabal
riak2-benchmarks/src/: Main.hs
riak2-client/: riak2-client.cabal
riak2-client-impl-concurrent-socket/: riak2-client-impl-concurrent-socket.cabal
riak2-client-impl-managed/: riak2-client-impl-managed.cabal
riak2-client-impl-managed-indef/: riak2-client-impl-managed.cabal
riak2-client-impl-sequential-socket/: riak2-client-impl-sequential-socket.cabal
riak2-client/src/Riak/: Client.hs
riak2-client/src/Riak/Socket/: Concurrent.hs  Sequential.hs
riak2-core/: README.md  generate-proto.sh  riak2-core.cabal
riak2-core-internal/: generate-proto.sh  riak2-core-internal.cabal
riak2-core-internal/proto/: riak.proto
riak2-core-internal/src/: Utils.hs
riak2-core-internal/src-proto/Proto/Proto/: Riak_Fields.hs
riak2-core-internal/src/Proto/Proto/: Riak.hs  Riak_Fields.hs
riak2-core-internal/src/Riak/: Connection.hs  Proto.hs  Request.hs  Response.hs  Socket.hs
riak2-core-internal/src/Riak/Connection/: Internal.hs
riak2-core-internal/src/Riak/Proto/: Lens.hs
riak2-core/riak2-core-internal/: Socket.hs
riak2-core/riak2-core-internal/Riak/: Proto.hs  Response.hs  Socket.hs
riak2-core/src/: Socket.hs
riak2-core/src/Riak/: Handle.hs  Interface.hs  Socket.hs
riak2-core/src/Riak/Handle/: Signature.hsig
riak2-core/src/Riak/Interface/: Signature.hsig
riak2-core/test/: Main.hs
riak2-handle-impl-exclusive/: riak2-handle-impl-exclusive.cabal
riak2-handle-impl-exclusive/test/: Main.hs
riak2-handle-impl-managed/: README.md  riak2-handle-impl-managed.cabal
riak2-handle-impl-pipeline/: riak2-handle-impl-pipeline.cabal
riak2-handle-impl-striped/: riak2-handle-impl-striped.cabal
riak2-iface/: riak2-iface.cabal
riak2-iface-concurrent-socket/: riak2-iface-concurrent-socket.cabal
riak2-iface-socket/: riak2-iface-socket.cabal
riak2-iface/src/Riak/: Interface.hs
riak2-iface/src/Riak/Interface/: Signature.hsig
riak2-interface-impls/: README.md  riak2-interface-impls.cabal
riak2-interface-impls/test/: Main.hs
riak2-proto/: README.md  Setup.hs  riak.proto  riak2-proto.cabal
riak2-proto/proto/: riak.proto
riak2-proto/src/Proto/Proto/: Riak.hs  Riak_Fields.hs
riak2-proto/src/Riak/: Message.hs  Proto.hs  Request.hs  Response.hs
riak2-proto/src/Riak/Proto/: Lens.hs
riak2-socket/: riak2-socket.cabal
riak2-socket/src/: Socket.hs
riak2/benchmarks/: put-get.hs  put.hs
riak2/public/: Riak.hs
riak2/public/Riak/: BinaryIndexQuery.hs  Bucket.hs  BucketProperties.hs  BucketProps.hs  BucketType.hs  Content.hs  Context.hs  ConvergentCounter.hs  ConvergentHyperLogLog.hs  ConvergentMap.hs  ConvergentSet.hs  ErlangFunction.hs  ErlangFunctionId.hs  ErlangTerm.hs  Error.hs  ExactQuery.hs  Handle.hs  Index.hs  IntIndexQuery.hs  Key.hs  MapReduce.hs  Object.hs  Quorum.hs  RangeQuery.hs  Schema.hs  Search.hs  SecondaryIndex.hs  SecondaryIndexQuery.hs  SecondaryIndexValue.hs  ServerInfo.hs  Sibling.hs
riak2/src/: Erlang.hs  Prelude.hs  Riak.hs  RiakBinaryIndexQuery.hs  RiakBucket.hs  RiakBucketInternal.hs  RiakBucketProperties.hs  RiakBucketProps.hs  RiakBucketType.hs  RiakBucketTypeInternal.hs  RiakBus.hs  RiakBusPool.hs  RiakContent.hs  RiakContext.hs  RiakConvergentCounter.hs  RiakConvergentHyperLogLog.hs  RiakConvergentMap.hs  RiakConvergentMapValue.hs  RiakConvergentSet.hs  RiakCounter.hs  RiakCounterBucketProps.hs  RiakCrdt.hs  RiakDebug.hs  RiakDeleteOpts.hs  RiakErlangFunction.hs  RiakErlangFunctionId.hs  RiakErlangTerm.hs  RiakError.hs  RiakExactQuery.hs  RiakGetOpts.hs  RiakHandle.hs  RiakHandle2.hs  RiakHandleError.hs  RiakHyperLogLog.hs  RiakHyperLogLogBucketProps.hs  RiakIndex.hs  RiakIndexName.hs  RiakIntIndexQuery.hs  RiakInternalBucket.hs  RiakInternalBucketProperties.hs  (+61 more)
riak2/src/Riak/: Bucket.hs  BucketProperties.hs  BucketType.hs  Charset.hs  Client.hs  Content.hs  ContentEncoding.hs  ContentType.hs  Context.hs  ConvergentCounter.hs  ConvergentHyperLogLog.hs  ConvergentMap.hs  ConvergentSet.hs  Counter.hs  ErlangTerm.hs  Error.hs  ExactQuery.hs  HyperLogLog.hs  Index.hs  IndexName.hs  IndexValue.hs  Internal.hs  Key.hs  Lenses.hs  Map.hs  MapReduce.hs  Metadata.hs  Object.hs  Opts.hs  Quorum.hs  RangeQuery.hs  Schema.hs  Search.hs  SecondaryIndex.hs  SecondaryIndexValue.hs  ServerInfo.hs  Set.hs  Sibling.hs  TTL.hs  Vclock.hs  (+1 more)
riak2/src/Riak/Client/: Signature.hsig
riak2/src/Riak/Internal/: Bucket.hs  BucketProperties.hs  Client.hs  Connection.hs  Content.hs  Context.hs  ConvergentMap.hs  ConvergentMapValue.hs  ConvergentSet.hs  Crdt.hs  Crdts.hs  Debug.hs  ErlangTerm.hs  Error.hs  ExactQuery.hs  Index.hs  IndexName.hs  IndexValue.hs  Key.hs  Manager.hs  MapReduce.hs  MapReduceFunction.hs  MapReduceInput.hs  MapReducePhase.hs  Message.hs  Object.hs  ObjectR.hs  ObjectW.hs  Pair.hs  Panic.hs  Params.hs  Prelude.hs  Quorum.hs  RangeQuery.hs  Response.hs  SecondaryIndex.hs  SecondaryIndexValue.hs  Set.hs  Sibling.hs  Types.hs  (+2 more)
riak2/src/ZZZ/: Erlang.hs  Riak.hs
riak2/test/: 02-bootstrap-datatypes.sh  03-create-indexes.sh  Main.hs  docker-compose.yaml  riak.conf  up  user.conf
riak2/test/schemas/: hlls  maps  nosiblings  sets
riakc/: riakc.cabal
riakc/src/: Main.hs
socket-impl-network/: socket-impl-network.cabal
(+82 files in other folders)
