cabal-version: 2.2

name: riak-but-better
version: 0.1.0
build-type: Custom

custom-setup
  setup-depends:
      base
    , Cabal == 2.2.0.1
    , proto-lens-protoc == 0.3.1.0

library
  autogen-modules:
    Proto.Riak
    Proto.Riak_Fields
  build-depends:
      attoparsec ^>= 0.13.2
    , base
    , base64-bytestring ^>= 1.0.0
    , bytestring ^>= 0.10.8
    , data-default-class
    , hashable ^>= 1.2.7
    , lens-family ^>= 1.2.2
    , lens-labels ^>= 0.2.0
    , list-transformer ^>= 1.0.4
    , network ^>= 2.7.0
    , proto-lens ^>= 0.3.1
    , proto-lens-protoc == 0.3.1.0
    , streaming-bytestring ^>= 0.1.6
    , text ^>= 1.2.3
    , transformers ^>= 0.5.5
    , unliftio ^>= 0.2.7
    , unliftio-core ^>= 0.1.1
    , unordered-containers ^>= 0.2.9
  default-language:
    Haskell2010
  exposed-modules:
    -- Temporarily exposed just to see them. These should be other-modules
    -- eventually
    Proto.Riak
    Proto.Riak_Fields
    Riak
    Riak.Internal
    Riak.Internal.Protobuf
    Riak.Lenses
  ghc-options:
    -Weverything
    -fno-warn-all-missed-specialisations
    -fno-warn-implicit-prelude
    -fno-warn-missed-specialisations
    -fno-warn-missing-export-lists
    -fno-warn-missing-import-lists
    -fno-warn-safe
    -fno-warn-unsafe
  hs-source-dirs:
    src
  other-modules:
    Riak.Internal.Connection
    Riak.Internal.Debug
    Riak.Internal.Message
    Riak.Internal.Panic
    Riak.Internal.Request
    Riak.Internal.Response

executable riak-cli
  build-depends:
      base
    , base64-bytestring
    , bytestring
    , lens-family
    , list-transformer
    , optparse-applicative
    , riak-but-better
    , text
    , transformers
    -- , lens-labels ^>= 0.2.0
  buildable:
    True
  default-language:
    Haskell2010
  ghc-options:
    -Wall
  hs-source-dirs:
    app
  main-is:
    Main.hs

test-suite tests
  build-depends:
      base
    , riak-but-better
    , tasty
    , tasty-hunit
  default-language:
    Haskell2010
  ghc-options:
    -threaded
    -with-rtsopts=-N2
    -Wall
  hs-source-dirs:
    test
  main-is:
    Main.hs
  type:
    exitcode-stdio-1.0
