cabal-version: 2.4

name: libriak-internal
version: 0.1.0
build-type: Simple

extra-source-files:
  proto/riak.proto
  generate-proto.sh

library
  build-depends:
    attoparsec,
    base,
    bytestring,
    foldl,
    lens,
    lens-labels,
    primitive,
    proto-lens ^>= 0.4.0,
    proto-lens-runtime ^>= 0.4.0,
    sockets == 0.1.0.0

  default-extensions:
    BangPatterns
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DerivingStrategies
    DuplicateRecordFields
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    OverloadedLabels
    NamedFieldPuns
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns

  default-language:
    Haskell2010

  exposed-modules:
    Libriak.Connection
    Libriak.Proto
    Libriak.Proto.Lens
    Libriak.Request
    Libriak.Response

  ghc-options:
    -Wall
    -fno-warn-name-shadowing

  hs-source-dirs:
    src
    src-proto

  other-modules:
    Proto.Proto.Riak
    Proto.Proto.Riak_Fields
    Libriak.Internal.Connection
    Libriak.Internal.Utils
