cabal-version: 2.4

name: libriak-internal
version: 0.1.0
build-type: Simple

library
  build-depends:
    attoparsec,
    base ^>= 4.11 || ^>= 4.12,
    bytestring,
    foldl,
    lens,
    lens-labels,
    primitive,
    proto-lens ^>= 0.4.0,
    riak-protobuf ^>= 1.0.0,
    sockets ^>= 0.3.0,

  default-extensions:
    BangPatterns
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DerivingStrategies
    DuplicateRecordFields
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    OverloadedLabels
    NamedFieldPuns
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    ViewPatterns

  default-language:
    Haskell2010

  exposed-modules:
    Libriak.Connection
    Libriak.Proto
    Libriak.Request
    Libriak.Response

  ghc-options:
    -Wall
    -fno-warn-name-shadowing

  hs-source-dirs:
    src

  other-modules:
    Libriak.Internal.Connection
    Libriak.Internal.Utils

  reexported-modules:
    Data.Riak.Proto
