cabal-version: 2.4

name: libriak
version: 0.1.0
build-type: Simple

library
  build-depends:
    attoparsec,
    base ^>= 4.11 || ^>= 4.12,
    bytestring,
    foldl,
    lens,
    lens-labels,
    primitive,
    proto-lens ^>= 0.4.0,
    riak-protobuf ^>= 1.0.0,
    safe-exceptions,
    sockets ^>= 0.3.0,
    stm,

  default-extensions:
    BangPatterns
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DerivingStrategies
    DuplicateRecordFields
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    OverloadedLabels
    NamedFieldPuns
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    ViewPatterns

  default-language:
    Haskell2010

  exposed-modules:
    Libriak.Handle
    Libriak.Connection
    Libriak.Request
    Libriak.Response

  ghc-options:
    -Wall
    -fno-warn-name-shadowing

  hs-source-dirs:
    src

  reexported-modules:
    Data.Riak.Proto
