cabal-version: 2.4

name: libriak
version: 0.1.0
build-type: Simple

library
  -- TODO are any of these deps redundant?
  build-depends:
    async,
    attoparsec,
    base ^>= 4.11 || ^>= 4.12,
    bytestring,
    deepseq,
    foldl,
    lens,
    lens-labels,
    nf,
    primitive,
    profunctors,
    proto-lens ^>= 0.4.0,
    proto-lens-runtime,
    riak-protobuf ^>= 1.0.0,
    safe-exceptions,
    sockets ^>= 0.3.0,
    stm,

  default-extensions:
    BangPatterns
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    OverloadedLabels
    NamedFieldPuns
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    ViewPatterns

  default-language:
    Haskell2010

  exposed-modules:
    Libriak.Handle
    Libriak.Connection
    Libriak.Request
    Libriak.Response

  ghc-options:
    -Wall
    -fno-warn-name-shadowing

  hs-source-dirs:
    src

  reexported-modules:
    Data.Riak.Proto
