cabal-version: 2.4

name: libriak
version: 0.1.0
build-type: Simple

library
  build-depends:
    async,
    base ^>= 4.11 || ^>= 4.12,
    bytestring,
    deepseq,
    foldl,
    lens,
    nf,
    primitive,
    proto-lens ^>= 0.4.0,
    proto-lens-runtime,
    riak-protobuf ^>= 1.0.0,
    sockets ^>= 0.3.0,
    stm,

  default-extensions:
    BangPatterns
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DerivingStrategies
    DuplicateRecordFields
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    OverloadedLabels
    NamedFieldPuns
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    ViewPatterns

  default-language:
    Haskell2010

  exposed-modules:
    Libriak.Handle
    Libriak.Connection
    Libriak.Request
    Libriak.Response

  ghc-options:
    -Wall
    -fno-warn-name-shadowing

  hs-source-dirs:
    src

  reexported-modules:
    Data.Riak.Proto

benchmark ping
  build-depends:
    base,
    ip,
    libriak,
    sockets

  ghc-options:
    -Wall
    -O
    -threaded
    -rtsopts
    "-with-rtsopts=-N"

  main-is:
    benchmarks/Ping.hs

  type:
    exitcode-stdio-1.0
