cabal-version: 2.4

name: riak2-benchmarks
version: 0.1.0
build-type: Simple

executable riak2-benchmarks
  build-depends:
      base
    , bytestring
    , data-default-class
    , ip
    , lens
    , optparse-applicative
    , riak == 1.2.0.0
    , riak-protobuf == 1.0.0
    , riak2

  default-extensions:
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables

  default-language:
    Haskell2010

  ghc-options:
    -Wall
    -O
    -rtsopts
    -threaded
    "-with-rtsopts=-N"

  hs-source-dirs:
    src

  main-is:
    Main.hs
