cabal-version: 2.4

name: riak2-client-impl-concurrent-socket
version: 0.1.0
build-type: Simple

library
  build-depends:
      base
    , bytestring
    , network
    , riak2-client-impl-sequential-socket
    , riak2-proto
    , unliftio

  default-language:
    Haskell2010

  exposed-modules:
    Riak.Client.Impl.Socket.Concurrent

  ghc-options:
    -Wall
    -fno-warn-name-shadowing

  hs-source-dirs:
    src
