cabal-version: 2.4

name: riak2-client-impl-managed-indef
version: 0.1.0
build-type: Simple

library
  build-depends:
      base
    , riak2-client-sig
    , riak2-proto
    , stm
    , unliftio

  default-extensions:
    LambdaCase
    ScopedTypeVariables

  default-language:
    Haskell2010

  exposed-modules:
    Riak.Client.Impl.Managed

  ghc-options:
    -Wall
    -fno-warn-name-shadowing

  hs-source-dirs:
    src
