cabal-version: 2.4

name: riak2-client-impl-sequential-socket
version: 0.1.0
build-type: Simple

library
  build-depends:
      attoparsec
    , base
    , bytestring
    , network
    , riak2-proto

  default-extensions:
    LambdaCase
    ScopedTypeVariables

  default-language:
    Haskell2010

  exposed-modules:
    Riak.Client.Impl.Socket.Sequential

  ghc-options:
    -Wall
    -fno-warn-name-shadowing

  hs-source-dirs:
    src
