cabal-version: 2.2

name: riak2-client
version: 0.1.0
build-type: Simple

library
  build-depends:
      base
    , network ^>= 2.7.0
    , riak2-proto

  default-extensions:
    ScopedTypeVariables

  default-language:
    Haskell2010

  exposed-modules:
    Riak.Client

  ghc-options:
    -Wall

  hs-source-dirs:
    src
