cabal-version: 2.2

name: riak2-client
version: 0.1.0
build-type: Simple

library
  build-depends:
      attoparsec ^>= 0.13.2
    , base
    , bytestring ^>= 0.10.8
    , foldl
    , network ^>= 2.7.0
    , riak2-proto
    , streaming
    , streaming-bytestring ^>= 0.1.6
    , transformers ^>= 0.5.5
    , unliftio

  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    NamedFieldPuns
    ScopedTypeVariables

  default-language:
    Haskell2010

  exposed-modules:
    Riak.Client
    Riak.Socket.Sequential
    Riak.Socket.Concurrent

  ghc-options:
    -Wall
    -fno-warn-name-shadowing

  hs-source-dirs:
    src
