cabal-version: 2.4

name: riak2-core-internal
version: 0.1.0
build-type: Simple

extra-source-files:
  proto/riak.proto
  generate-proto.sh

library
  build-depends:
    attoparsec,
    base,
    bytestring,
    foldl,
    lens,
    network,
    proto-lens ^>= 0.4.0,
    proto-lens-runtime ^>= 0.4.0

  default-extensions:
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DerivingStrategies
    DuplicateRecordFields
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    OverloadedLabels
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns

  default-language:
    Haskell2010

  exposed-modules:
    Riak.Proto
    Riak.Proto.Lens
    Riak.Request
    Riak.Response
    Riak.Socket

  ghc-options:
    -Wall
    -fno-warn-name-shadowing

  hs-source-dirs:
    src
    src-proto

  other-modules:
    Proto.Proto.Riak
    Proto.Proto.Riak_Fields
    Socket
    Utils
