cabal-version: 2.4

name: riak2-core
version: 0.1.0
build-type: Simple

library
  build-depends:
    base,
    riak2-core-internal

  default-language:
    Haskell2010

  reexported-modules:
    Riak.Proto,
    Riak.Proto.Lens,
    Riak.Request,
    Riak.Response,
    Riak.Socket

  hs-source-dirs:
    src

  signatures:
    Riak.Interface.Signature
