cabal-version: 2.4

name: riak2-core
version: 0.1.0
build-type: Simple

library
  build-depends:
    base,
    bytestring,
    foldl,
    lens,
    proto-lens ^>= 0.4.0,
    riak2-core-internal

  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    ScopedTypeVariables

  default-language:
    Haskell2010

  exposed-modules:
    Riak.Handle

  reexported-modules:
    Riak.Proto,
    Riak.Proto.Lens,
    Riak.Request,
    Riak.Response,
    Riak.Socket

  hs-source-dirs:
    src

  signatures:
    Riak.Handle.Signature
