cabal-version: 2.4

name: riak2-handle-impl-exclusive
version: 0.1.0
build-type: Simple

library
  build-depends:
    base,
    foldl,
    riak2-core-internal

  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NamedFieldPuns
    ScopedTypeVariables
    UnicodeSyntax
    ViewPatterns

  default-language:
    Haskell2010

  exposed-modules:
    Riak.Handle.Impl.Exclusive

  ghc-options:
    -Wall

  hs-source-dirs:
    src

test-suite tests
  build-depends:
    base,
    network,
    proto-lens,
    random,
    riak2-core,
    riak2-handle-impl-exclusive,
    stm

  default-extensions:
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables

  default-language:
    Haskell2010

  ghc-options:
    -threaded
    -with-rtsopts=-N
    -Wall

  hs-source-dirs:
    test

  main-is:
    Main.hs

  type:
    exitcode-stdio-1.0

  mixins:
    riak2-core
      requires (Riak.Handle.Signature as Riak.Handle.Impl.Exclusive)
