cabal-version: 2.4

name: riak2-handle-impl-exclusive
version: 0.1.0
build-type: Simple

library
  build-depends:
    base,
    foldl,
    libriak-internal

  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    EmptyDataDeriving
    LambdaCase
    NamedFieldPuns
    ScopedTypeVariables
    UnicodeSyntax
    ViewPatterns

  default-language:
    Haskell2010

  exposed-modules:
    Riak.Handle.Impl.Exclusive

  ghc-options:
    -Wall

  hs-source-dirs:
    src

test-suite tests
  build-depends:
    base,
    ip,
    libriak,
    proto-lens,
    riak2-handle-impl-exclusive

  default-extensions:
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables

  default-language:
    Haskell2010

  ghc-options:
    -threaded
    -with-rtsopts=-N
    -Wall

  hs-source-dirs:
    test

  main-is:
    Main.hs

  type:
    exitcode-stdio-1.0

  mixins:
    libriak
      requires (Riak.Handle.Signature as Riak.Handle.Impl.Exclusive)
