cabal-version: 2.4

name: riak2-handle-impl-managed
version: 0.1.0
build-type: Simple

library
  build-depends:
    base,
    libriak,
    safe-exceptions,
    stm,
    time,

  default-extensions:
    BangPatterns
    DeriveAnyClass
    DerivingStrategies
    EmptyDataDeriving
    LambdaCase
    NamedFieldPuns
    ScopedTypeVariables
    UnicodeSyntax

  default-language:
    Haskell2010

  exposed-modules:
    Riak.Handle.Impl.Managed

  ghc-options:
    -Wall

  hs-source-dirs:
    src

test-suite tests
  build-depends:
    base

  default-language:
    Haskell2010

  ghc-options:
    -threaded
    -with-rtsopts=-N
    -Wall

  hs-source-dirs:
    test

  main-is:
    Main.hs

  type:
    exitcode-stdio-1.0
