cabal-version: 2.4

name: riak2-handle-impl-pipeline
version: 0.1.0
build-type: Simple

library
  build-depends:
    base,
    riak2-core-internal,
    safe-exceptions

  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NamedFieldPuns
    ScopedTypeVariables

  default-language:
    Haskell2010

  exposed-modules:
    Riak.Handle.Impl.Pipeline

  ghc-options:
    -Wall

  hs-source-dirs:
    src

test-suite tests
  build-depends:
    base

  default-language:
    Haskell2010

  ghc-options:
    -threaded
    -with-rtsopts=-N
    -Wall

  hs-source-dirs:
    test

  main-is:
    Main.hs

  type:
    exitcode-stdio-1.0
