cabal-version: 2.4

name: riak2-iface-concurrent-socket
version: 0.1.0
build-type: Simple

library
  build-depends:
      base
    , bytestring
    , network
    , riak2-iface-socket
    , riak2-proto
    , unliftio

  default-extensions:
    ScopedTypeVariables

  default-language:
    Haskell2010

  exposed-modules:
    Riak.Interface.Impl.Socket.Concurrent

  ghc-options:
    -Wall
    -fno-warn-name-shadowing

  hs-source-dirs:
    src
