cabal-version: 2.4

name: riak2-iface-socket
version: 0.1.0
build-type: Simple

library
  build-depends:
      attoparsec
    , base
    , bytestring
    , riak2-proto
    , socket-sig

  default-extensions:
    LambdaCase
    ScopedTypeVariables

  default-language:
    Haskell2010

  exposed-modules:
    Riak.Interface.Impl.Socket

  ghc-options:
    -Wall
    -fno-warn-name-shadowing

  hs-source-dirs:
    src

  reexported-modules:
    Riak.Interface.Impl.Socket as Riak.Interface.Signature
