cabal-version: 2.4

name: riak2-iface
version: 0.1.0
build-type: Simple

library
  build-depends:
      base
    , foldl
    , lens
    , proto-lens
    , riak2-proto

  default-extensions:
    DeriveFunctor
    DerivingStrategies
    LambdaCase
    ScopedTypeVariables

  default-language:
    Haskell2010

  exposed-modules:
    Riak.Interface

  hs-source-dirs:
    src

  signatures:
    Riak.Interface.Signature
