cabal-version: 2.4

name: riak2-interface-impls
version: 0.1.0
build-type: Simple

library
  build-depends:
    base,
    riak2-core-internal,
    unliftio

  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NamedFieldPuns
    ScopedTypeVariables

  default-language:
    Haskell2010

  exposed-modules:
    Riak.Interface.Impl.Socket
    Riak.Interface.Impl.Socket.Concurrent

  ghc-options:
    -Wall

  hs-source-dirs:
    src

library riak2-interface-impl-managed
  build-depends:
    base,
    riak2-core,
    stm,
    unliftio

  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    EmptyDataDeriving
    LambdaCase
    NamedFieldPuns
    ScopedTypeVariables

  default-language:
    Haskell2010

  exposed-modules:
    Riak.Interface.Impl.Managed

  ghc-options:
    -Wall

  hs-source-dirs:
    riak2-interface-impl-managed

  -- visibility:
  --   public

test-suite tests
  build-depends:
    base,
    network,
    proto-lens,
    random,
    riak2-core,
    riak2-interface-impls,
    -- riak2-interface-impl-managed,
    stm

  default-extensions:
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables

  default-language:
    Haskell2010

  ghc-options:
    -threaded
    -with-rtsopts=-N
    -Wall

  hs-source-dirs:
    test

  main-is:
    Main.hs

  type:
    exitcode-stdio-1.0

  mixins:
    riak2-core
      requires (Riak.Interface.Signature as Riak.Interface.Impl.Socket)
