cabal-version: 2.2

name: riak2-proto
version: 0.1.0
build-type: Custom

extra-source-files:
  riak.proto

custom-setup
  setup-depends:
      base
    , Cabal ^>= 2.2.0 || ^>= 2.4.0
    , proto-lens-setup == 0.4.0.1

library
  autogen-modules:
    Proto.Riak
    Proto.Riak_Fields

  build-depends:
      proto-lens-runtime ^>= 0.4.0

  default-language:
    Haskell2010

  exposed-modules:
    Proto.Riak
    Proto.Riak_Fields
