cabal-version: 2.2

name: riak2-proto
version: 0.1.0
build-type: Custom

extra-source-files:
  riak.proto

custom-setup
  setup-depends:
      base
    , Cabal ^>= 2.2.0 || ^>= 2.4.0
    , proto-lens-setup == 0.4.0.1

library
  autogen-modules:
    Proto.Riak
    Proto.Riak_Fields

  build-depends:
      attoparsec ^>= 0.13.2
    , base
    , bytestring
    , proto-lens ^>= 0.4.0
    , proto-lens-runtime ^>= 0.4.0

  default-extensions:
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    GeneralizedNewtypeDeriving
    OverloadedLabels
    ScopedTypeVariables
    TypeApplications

  default-language:
    Haskell2010

  exposed-modules:
    Riak.Message
    Riak.Proto
    Riak.Proto.Lens
    Riak.Request
    Riak.Response

  ghc-options:
    -Wall
    -fno-warn-name-shadowing

  hs-source-dirs:
    src

  other-modules:
    Proto.Riak
    Proto.Riak_Fields
