cabal-version: 2.4

name: riak2-proto
version: 0.1.0
build-type: Simple

extra-source-files:
  proto/riak.proto
  generate-proto.sh

library
  build-depends:
    base,
    bytestring,
    proto-lens ^>= 0.4.0,
    proto-lens-runtime ^>= 0.4.0

  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    InstanceSigs
    LambdaCase
    ViewPatterns

  default-language:
    Haskell2010

  exposed-modules:
    Riak.Proto
    Riak.Proto.Lens
    Riak.Request
    Riak.Response

  ghc-options:
    -Wall

  hs-source-dirs:
    src

  other-modules:
    Proto.Proto.Riak
    Proto.Proto.Riak_Fields
    Utils
