cabal-version: 2.4

name: riak2
version: 0.1.0
build-type: Simple

description:
  __Library organization__
  .
  For documentation readability purposes, this library's modules are organized
  around types. A module will typically export one type and its API, which
  consists of the functions whose primary input type is the type in question.
  .
  For example, to /list the keys in a bucket/, the primary input type is the
  /bucket/, so this function is exported by the the "Riak.Bucket" module.
  .
  However, every symbol is also re-exported by the top-level "Riak" module.
  .
  __Module guide__
  .
  Top-level re-export of all types and functions:
  .
  * "Riak"
  .
  Key/value store types and operations:
  .
  * "Riak.Object"
  * "Riak.Content"
  * "Riak.Sibling"
  .
  CRDT types and operations:
  .
  * "Riak.ConvergentCounter"
  * "Riak.ConvergentHyperLogLog"
  * "Riak.ConvergentMap"
  * "Riak.ConvergentSet"
  .
  Key namespace types and operations:
  .
  * "Riak.BucketType"
  * "Riak.Bucket"
  * "Riak.Key"
  * "Riak.BucketProperties"
  .
  Secondary index types:
  .
  * "Riak.SecondaryIndex"
  * "Riak.SecondaryIndexValue"
  * "Riak.ExactQuery"
  * "Riak.RangeQuery"
  .
  Search types and operations:
  .
  * "Riak.Search"
  * "Riak.Schema"
  * "Riak.Index"
  .
  MapReduce types and operations:
  .
  * "Riak.MapReduce"
  * "Riak.ErlangTerm"
  .
  Cluster types and operations:
  .
  * "Riak.ServerInfo"
  .
  Miscellaneous:
  .
  * "Riak.Context"
  * "Riak.Error"
  * "Riak.Quorum"

library
  build-depends:
    base,
    data-default-class,
    libriak,
    riak2-internal,

  default-language:
    Haskell2010

  exposed-modules:
    Riak
    Riak.BucketProperties
    Riak.BucketType
    Riak.Content
    Riak.Context
    Riak.ConvergentCounter
    Riak.ConvergentHyperLogLog
    Riak.ConvergentMap
    Riak.ConvergentSet
    Riak.ErlangTerm
    Riak.Error
    Riak.ExactQuery
    Riak.Index
    Riak.Key
    Riak.MapReduce
    Riak.Object
    Riak.Quorum
    Riak.RangeQuery
    Riak.Schema
    Riak.Search
    Riak.SecondaryIndex
    Riak.SecondaryIndexValue
    Riak.ServerInfo
    Riak.Sibling

  hs-source-dirs:
    public

  reexported-modules:
    RiakBucket as Riak.Bucket,

library riak2-internal
  build-depends:
    attoparsec,
    base ^>= 4.11.1 || ^>= 4.12.0,
    base64-bytestring ^>= 1.0.0,
    bytestring ^>= 0.10.8,
    bytestring-lexing ^>= 0.5.0,
    containers ^>= 0.5.11 || ^>= 0.6.0,
    data-default-class ^>= 0.1.2,
    foldl ^>= 1.4.4,
    generic-lens ^>= 1.2.0,
    hashable ^>= 1.2.7,
    lens ^>= 4.17,
    lens-labels,
    libriak,
    profunctors ^>= 5.3,
    text ^>= 1.2.3,
    time,
    unordered-containers ^>= 0.2.9,
    vector,

  default-extensions:
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MagicHash
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnicodeSyntax
    ViewPatterns

  default-language:
    Haskell2010

  exposed-modules:
    RiakBucket
    RiakBucketProperties
    RiakBucketType
    RiakContent
    RiakContext
    RiakConvergentCounter
    RiakConvergentHyperLogLog
    RiakConvergentMap
    RiakConvergentMapValue
    RiakConvergentSet
    RiakErlangTerm
    RiakError
    RiakExactQuery
    RiakIndex
    RiakIndexName
    RiakKey
    RiakMapReduce
    RiakMapReduceFunction
    RiakMapReducePhase
    RiakObject
    RiakPing
    RiakQuorum
    RiakRangeQuery
    RiakSchema
    RiakSearch
    RiakSecondaryIndex
    RiakSecondaryIndexValue
    RiakServerInfo
    RiakSibling

  ghc-options:
    -Weverything
    -fno-warn-all-missed-specialisations
    -fno-warn-implicit-prelude
    -fno-warn-missed-specialisations
    -fno-warn-missing-export-lists
    -fno-warn-missing-import-lists
    -fno-warn-name-shadowing
    -fno-warn-safe
    -fno-warn-unsafe

  hs-source-dirs:
    src

  mixins:
    base
      (Control.Applicative, Control.Category, Control.Concurrent,
        Control.Exception, Control.Monad, Control.Monad.IO.Class,
        Data.Bifunctor, Data.Bits, Data.Coerce, Data.Function, Data.Int,
        Data.Kind, Data.List, Data.List.NonEmpty, Data.Maybe, Data.Word,
        GHC.Generics, Numeric.Natural, Prelude as GHC.Prelude)

  other-modules:
    Prelude
    RiakBucketInternal
    RiakCrdt
    RiakPanic
    RiakProtoContent
    RiakProtoPair
    RiakMapReduceInput
    RiakUtils

test-suite tests
  build-depends:
    base,
    bytestring,
    data-default-class,
    foldl,
    generic-lens,
    ip,
    lens,
    random,
    riak2-internal,
    riak2-handle-impl-exclusive,
    tasty,
    tasty-hunit

  default-extensions:
    DataKinds
    DuplicateRecordFields
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    UnicodeSyntax

  default-language:
    Haskell2010

  ghc-options:
    -Wall

  hs-source-dirs:
    test

  main-is:
    Main.hs

  mixins:
    riak2-internal requires (Riak.Handle.Signature as Riak.Handle.Impl.Exclusive)

  type:
    exitcode-stdio-1.0
